fix(compass): box-shadow cut off (#8366)

--- a/src/patternfly/components/Compass/compass.scss
+++ b/src/patternfly/components/Compass/compass.scss
@@ -80,9 +80,25 @@
 
   // Glass theme
   --#{$compass}--BackgroundColor--glass: transparent;
+  --#{$compass}__content--MarginBlockStart--glass: calc(var(--#{$compass}__content--PaddingBlockStart--glass) * -1);
+  --#{$compass}__content--MarginBlockEnd--glass: calc(var(--#{$compass}__content--PaddingBlockEnd--glass) * -1);
+  --#{$compass}__content--MarginInlineStart--glass: calc(var(--#{$compass}__content--PaddingInlineStart--glass) * -1);
+  --#{$compass}__content--MarginInlineEnd--glass: calc(var(--#{$compass}__content--PaddingInlineEnd--glass) * -1);
+  --#{$compass}__content--PaddingBlockStart--glass: var(--pf-t--global--spacer--sm);
+  --#{$compass}__content--PaddingBlockEnd--glass: var(--pf-t--global--spacer--md);
+  --#{$compass}__content--PaddingInlineStart--glass: var(--pf-t--global--spacer--md);
+  --#{$compass}__content--PaddingInlineEnd--glass: var(--pf-t--global--spacer--md);
 
   :where(.pf-v6-theme-glass) & {
     --#{$compass}--BackgroundColor: var(--#{$compass}--BackgroundColor--glass);
+    --#{$compass}__content--MarginBlockStart: var(--#{$compass}__content--MarginBlockStart--glass);
+    --#{$compass}__content--MarginBlockEnd: var(--#{$compass}__content--MarginBlockEnd--glass);
+    --#{$compass}__content--MarginInlineStart: var(--#{$compass}__content--MarginInlineStart--glass);
+    --#{$compass}__content--MarginInlineEnd: var(--#{$compass}__content--MarginInlineEnd--glass);
+    --#{$compass}__content--PaddingBlockStart: var(--#{$compass}__content--PaddingBlockStart--glass);
+    --#{$compass}__content--PaddingBlockEnd: var(--#{$compass}__content--PaddingBlockEnd--glass);
+    --#{$compass}__content--PaddingInlineStart: var(--#{$compass}__content--PaddingInlineStart--glass);
+    --#{$compass}__content--PaddingInlineEnd: var(--#{$compass}__content--PaddingInlineEnd--glass);
   }
 }
 
@@ -382,6 +398,14 @@
   flex: 1 0 0;
   flex-direction: column;
   min-height: 0;
+  padding-block-start: var(--#{$compass}__content--PaddingBlockStart, 0);
+  padding-block-end: var(--#{$compass}__content--PaddingBlockEnd, 0);
+  padding-inline-start: var(--#{$compass}__content--PaddingInlineStart, 0);
+  padding-inline-end: var(--#{$compass}__content--PaddingInlineEnd, 0);
+  margin-block-start: var(--#{$compass}__content--MarginBlockStart, 0);
+  margin-block-end: var(--#{$compass}__content--MarginBlockEnd, 0);
+  margin-inline-start: var(--#{$compass}__content--MarginInlineStart, 0);
+  margin-inline-end: var(--#{$compass}__content--MarginInlineEnd, 0);
   overflow: auto;
 
   > *:last-child {
